# Ohtuminiprojekti

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  Procfile  README.md  app.py  log.html  master.db  output.xml  prod-master.db  pyproject.toml  report.html  run_robot_tests.sh  sprint1_valmistelut.MD  sqlite_schema  test-master.db
.github/workflows/: deploy.yml  main.yml
dokumentaatio/: arkkitehtuuri.md
src/: AppLibrary.py  app.py  database.py  database.yml  initialize_database.py  master.db  routes.py  run_robot_tests.sh
src/entities/: tip.py
src/repositories/: tip_repository.py  user_repository.py
src/services/: tip_service.py  user_service.py
src/templates/: add_tip.html  index.html  layout.html  login.html  register.html  search.html
src/tests/: delete_tip.robot  home.robot  login.robot  login_resource.robot  logout.robot  new_tip.robot  new_tip_resource.robot  register.robot  resource.robot  search.robot  test_tip_service.py
src/tests/entities/: tip_test.py
src/tests/repositories/: tip_repository_test.py  user_repository_test.py
src/tests/services/: tip_service_test.py  user_service_test.py
templates/: add_tip.html  index.html
