[tool.poetry]
name = "ohtuminiprojekti"
version = "0.1.0"
description = "Ohjelmistotuotannon miniprojekti"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
