[tool.poetry]
name = "ohtuminiprojekti"
version = "0.1.0"
description = "Ohjelmistotuotannon miniprojekti"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
robotframework = "^4.1.3"
pytest-dotenv = "^0.5.2"
requests = "^2.27.1"
robotframework-seleniumlibrary = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
